Pacial05 - Add filtering to API
